Fixed checkout positioning on mobile view

--- a/custom.css
+++ b/custom.css
@@ -36,3 +36,6 @@ footer {
     margin-top: 60px;
     padding: 5em;
 }
+select, option{
+    min-width: 180px;
+}
